# thesis

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  compress_dir.sh  copy_from_marvin.sh  copy_from_marvin_old.sh  copy_from_marvin_v2.sh  environment.yml  pyproject.toml  setup.cfg  slurm_pyvmte.sh  slurm_pyvmte_v2.sh  slurm_sols.sh  slurm_thesis.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
inst/: WORDLIST.txt
paper/: abbrvnat_my_version.bst  mte_papers.md  presentation.tex  refs.bib  task_paper.py  thesis.synctex(busy)  thesis.tex
paper/figures/: sm_sol_lower.tex  sm_sol_upper.tex  sm_upper_incr.tex  sm_upper_no_restr.tex
paper/memo/: refs.bib  thesis_memo.tex
paper/memo_pretest/: memo_pretest.tex
paper/memo_relaxation/: memo_relaxation.tex
paper/notes/: bhattacharya_2009_jasa.md  comments.md  convex_optimization.md  differentiability.md  inference_programs.md  shapiro_1991.md  to_read.md
paper/presentation/: presentation.tex  thesis_pres.tex
paper/thesis/: refs.bib  thesis.lot  thesis.tex
src/thesis/: __init__.py  classes.py  config.py  utilities.py
src/thesis/analysis/: task_analysis.py
src/thesis/bhattacharya/: __init__.py  bhatta_2009_finite_sample.ipynb  bhatta_funcs.py  bhatta_plot_funcs.py  bhattacharya_2009.ipynb  cdd_funcs.py  task_bhatta_distr.py  task_bhatta_plots.py  task_bhatta_sims.py
src/thesis/bootstrap_fail/: __init__.py  bootstrap.ipynb  bootstrap_plot.ipynb  funcs.py  task_bootstrap_sims.py  task_plot_bootstrap_sims.py
src/thesis/bootstrap_kink/: __init__.py  bootstrap_max.ipynb  funcs_kink.py
src/thesis/data_management/: __init__.py  task_data_management.py
src/thesis/final/: __init__.py  task_final.py
src/thesis/imbens_manski/: __init__.py  _task_plot_imbens_manski.py  _task_sim_imbens_manski.py  funcs.py  im_funcs.py  imbens_manski.ipynb  task_imbens_manski_plots.py  task_imbens_manski_sims.py  task_sim_imbens_manski.py
src/thesis/marvin/17055850/bld/simple_model/analytical_delta/: 15.pkl  19.pkl  27.pkl  43.pkl  47.pkl  51.pkl  59.pkl  63.pkl  7.pkl  71.pkl  75.pkl
src/thesis/marvin/17055850/bld/simple_model/numerical_delta/: 1.pkl  101.pkl  106.pkl  2.pkl  (+23 more)
src/thesis/misc/: __init__.py  _task_relaxation_mte.py  estimate_avars.py  imbens_manski_critical_value.ipynb  plots_memo.ipynb  relax.py  relaxation_mte.py  task_compute_relaxation_mte.py  task_plot_relaxation_bootstrap.py  task_plot_relaxation_mte.py  task_relaxation_bootstrap.py  task_relaxation_mte.py
src/thesis/pyvmte/: __init__.py  _task_combine_pyvmte_sims.py  _task_plot_pyvmte_sims_by_late.py  pyvmte_sims.py  pyvmte_sims_config.py  task_combine_model_solutions.py  task_combine_pyvmte_sims.py  task_plot_identification_binary_iv.py  task_plot_identification_binary_iv_with_bernstein.py  task_plot_pyvmte_sims_by_late.py  task_plot_simple_model_by_late.py  task_plot_simple_model_sharp.py  task_pyvmte_sims.py  task_solve_simple_model.py  task_solve_simple_model_sharp.py
src/thesis/pyvmte/figures/: __init__.py  task_plot_identification_binary_iv.py  task_plot_identification_binary_multiple_constraints.py  task_plot_pyvmte_sims_by_late.py  task_plot_pyvmte_sims_by_late_and_alpha.py  task_plot_pyvmte_sims_by_late_and_subsample_share.py  task_plot_pyvmte_sims_by_late_and_tolerance.py
src/thesis/pyvmte/sims/: __init__.py  check_aggregation.ipynb  pyvmte_sims.py  task_combine_pyvmte_sims.py  task_pyvmte_sims.py
src/thesis/pyvmte/solutions/: __init__.py  task_combine_model_solutions.py  task_solve_simple_model.py
src/thesis/r_ivmte/: .Rhistory  __init__.py  ivmte_simple_model.r
src/thesis/simple_model/: bootstrap.ipynb  bootstrap_plot.ipynb  debug_analytical.ipynb  funcs.py  plot_kink_with_bernstein.ipynb  sm_debugging.ipynb  task_combine_sim_results.py  task_combine_simple_model_sims.py  task_plot_pretests.py  task_plot_simple_model_sims.py  task_plot_solution.py  task_simple_model_sims.py
src/thesis/solutions/: solutions_simple_model_combined.pkl
tests/analysis/: test_model.py  test_predict.py
tests/bootstrap/: __init__.py  test_bootstrap_off_kink.py
tests/bootstrap_fail/: __init__.py  test_funcs.py
tests/data_management/: test_clean_data.py
tests/imbens_manski/: __init__.py  test_im_funcs.py
tests/misc/: __init__.py  test_relaxation.py
tests/model_solutions/: __init__.py  test_simple_model_sharp.py
tests/pyvmte/: __init__.py  test_identification.py
tests/simple_model/: test_debug_sm_cis.py  test_funcs.py
tests/utilities/: test_utilities.py
(+8479 files in other folders)
