[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/thesis/_version.py"

[tool.pytask.ini_options]
paths = ["./src/thesis", "./paper"]
pdbcls = "pdbp:Pdb"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
fix = true
pylint.max-args = 10
fix-only = false # No linting errors will be reported
extend-ignore = [
    "S101",  # Use of `assert` detected.
    "ANN",  # Missing type annotations
    "TD002", # to do hooks
    "TD003", # to do hooks
    "FIX002", # to do hooks
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.nbqa.config]
black = "pyproject.toml"

[tool.nbqa.mutate]
black = 1


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]

[tool.yamlfix]
line_length = 88
none_representation = "null"

[tool.codespell]
skip = "*.ipynb,inst/WORDLIST"
