[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/thesis/_version.py"

[tool.pytask.ini_options]
paths = ["./src/thesis", "./paper"]
pdbcls = "pdbp:Pdb"

[tool.pytask.ini_options.markers]
wip = "A marker for tasks which are work-in-progress."
plot = "A marker for tasks plotting binary IV model solutions."
hpc_pyvmte = "A marker for pyvmte simulations on HPC."
hpc = "A marker for high-performance computing tasks."
pyvmte_sols = "A marker for model solutions using pyvmte."
plot_for_paper = "A marker for plots specifically for the paper."
plot_for_paper_wip = "A marker for plots specifically for the paper."
solve = "A marker for tasks solving models."
relax = "A marker for tasks working on relaxation of the LP."
simple_model_sims = "A marker for simple model simulations."
bhatta = "Bhattachayra 2009 analysis."

[tool.ruff]
target-version = "py311"
select = ["ALL"]
fix = true
# Might want to reduce this at some point, currently just the set to whatever number
# is required.
pylint.max-args = 13
fix-only = false # No linting errors will be reported
extend-ignore = [
    "S101",  # Use of `assert` detected.
    "S301", # pickle safety
    "ANN",  # Missing type annotations
    "TD002", # to do hooks
    "TD003", # to do hooks
    "FIX002", # to do hooks
    "SLF001", # private member
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.nbqa.config]
black = "pyproject.toml"

[tool.nbqa.mutate]
black = 1


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]

[tool.yamlfix]
line_length = 88
none_representation = "null"

[tool.codespell]
skip = "*.ipynb,inst/WORDLIST"
