[metadata]
name = thesis
description = Master Thesis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buddejul/thesis
author = Julian Budde
author_email = buddejul@gmail.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/buddejul/thesis
    Documentation = https://github.com/buddejul/thesis
    Github = https://github.com/buddejul/thesis
    Tracker = https://github.com/buddejul/thesis/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.12
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/thesis/_version.py
